Add diffblue.yml & remove irrelevant modules

--- a/herd-build/pom.xml
+++ b/herd-build/pom.xml
@@ -36,8 +36,8 @@
    <modules>
       <module>herd-build-tools</module>
       <module>herd-swaggergen-maven-plugin</module>
-      <module>herd-scripts</module>
-      <module>herd-docs</module>
+      <!--<module>herd-scripts</module>
+      <module>herd-docs</module>-->
    </modules>
 
 </project>
