updated herd, removed non-compiling modules

--- a/herd-build/pom.xml
+++ b/herd-build/pom.xml
@@ -35,9 +35,9 @@
 
    <modules>
       <module>herd-build-tools</module>
-      <module>herd-swaggergen-maven-plugin</module>
+      <!-- <module>herd-swaggergen-maven-plugin</module> -->
       <module>herd-scripts</module>
-      <module>herd-docs</module>
+      <!-- <module>herd-docs</module> -->
    </modules>
 
 </project>
