--- a/pom.xml
+++ b/pom.xml
@@ -39,7 +39,7 @@
         Note that upgrading the Activiti version will automatically attempt to upgrade the DB which will have problems running as the application user since
         table modification permissions won't be present. Instead, only upgrade the version when the DB scripts have been run by the DBA. The DB scripts
         are located in the activiti-engine JAR in the org.activiti.db.upgrade package.
-       -->
+      -->
       <activiti.version>5.19.0.1</activiti.version>
       <aspectj.version>1.8.11</aspectj.version>
       <aws.sdk.version>1.11.210</aws.sdk.version>
@@ -64,7 +64,7 @@
       <javax.servlet.version>4.0.0</javax.servlet.version>
       <jodatime.version>2.9.9</jodatime.version>
       <jstl-impl.version>1.2.4</jstl-impl.version>
-      <junit.version>4.12</junit.version>
+      <junit.version>4.8.2</junit.version>
       <log4j.version>2.10.0</log4j.version>
       <maven.artifact.version>3.5.0</maven.artifact.version>
       <maven.plugin.api.version>3.5.0</maven.plugin.api.version>
@@ -122,7 +122,8 @@
       <maven.war.plugin.version>3.2.0</maven.war.plugin.version>
       <swagger-codegen-maven-plugin>2.3.0</swagger-codegen-maven-plugin>
       <versions.maven.plugin.version>2.5</versions.maven.plugin.version>
-      <mockito.version>2.10.0</mockito.version>
+<!--  <mockito.version>2.10.0</mockito.version> -->
+      <mockito.version>1.10.19</mockito.version>
       <nexus.staging.maven.plugin.version>1.6.8</nexus.staging.maven.plugin.version>
       <jsoup.version>1.10.3</jsoup.version>
 
@@ -888,7 +889,7 @@
             <artifactId>maven-surefire-plugin</artifactId>
             <version>${maven.surefire.plugin.version}</version>
             <configuration>
-              <testFailureIgnore>true</testFailureIgnore>
+              <testFailureIgnore>false</testFailureIgnore>
               <argLine>${argLine}</argLine>
               <useUnlimitedThreads>true</useUnlimitedThreads>
               <forkCount>1</forkCount>
